--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -2,3 +2,12 @@
   .columns
     h2
       = title("Home")
+
+    .decades
+      .decades__count
+
+    .counter
+      .counter__value
+      .counter__buttons.button-group
+        a.counter__button.button -
+        a.counter__button.button +
