--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -9,5 +9,5 @@
     .counter
       .counter__value
       .counter__buttons.button-group
-        a.counter__button.button -
-        a.counter__button.button +
+        a.counter__button.counter__button--decrease.button -
+        a.counter__button.counter__button--increase.button +
