--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -3,11 +3,11 @@
     h2
       = title("Home")
 
-    .decades
-      .decades__count
+    .decades.js-decades
+      .decades__count.js-decades-count
 
-    .counter
-      .counter__value
+    .counter.js-counter
+      .counter__value.js-value
       .counter__buttons.button-group
-        a.counter__button.counter__button--decrease.button -
-        a.counter__button.counter__button--increase.button +
+        a.counter__button.counter__button--decrease.button.js-button.js-button--decrease -
+        a.counter__button.counter__button--increase.button.js-button.js-button--increase +
